# bazel_monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bazel_poc  bazel-bin  bazel-out  bazel-testlogs  go.work
.github/: ci-cd.yml
apps/app_a/: BUILD.bazel  go.mod  main.go
apps/app_a/handlers/: BUILD.bazel  hello.go
apps/app_b/: BUILD.bazel  go.mod  main.go
apps/app_b/handlers/: BUILD.bazel  hello.go
lib/strings/: BUILD.bazel  go.mod  uppercase.go  uppercase_test.go
