load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_a_lib",
    srcs = ["main.go"],
    importpath = "github.com/kadmohardy/bazel_monorepo/apps/app_a",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/app_a/handlers",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "app_a",
    embed = [":app_a_lib"],
    visibility = ["//visibility:public"],
)
