load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "strings",
    srcs = ["uppercase.go"],
    importpath = "github.com/kadmohardy/bazel_monorepo/lib/strings",
    visibility = ["//visibility:public"],
)

go_test(
    name = "strings_test",
    srcs = ["uppercase_test.go"],
    embed = [":strings"],
)
